@@ -1,15 +1,27 @@
 package net.creeperhost.creeperlauncher;
 
+import net.covers1624.jdkutils.AdoptiumProvisioner;
+import net.covers1624.jdkutils.JdkInstallationManager;
+import net.covers1624.quack.net.okhttp.MultiHasherInterceptor;
+import net.covers1624.quack.net.okhttp.OkHttpDownloadAction;
+import net.covers1624.quack.net.okhttp.ThrottlerInterceptor;
+import net.creeperhost.creeperlauncher.util.SimpleCookieJar;
 import net.creeperhost.creeperlauncher.os.OS;
 import net.creeperhost.minetogether.lib.util.SignatureUtil;
+import okhttp3.OkHttpClient;
+import okio.Throttler;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
 
-public class Constants
-{
+public class Constants {
+
     private static final Logger LOGGER = LogManager.getLogger();
 
     //CWD
@@ -22,7 +34,7 @@ public class Constants
 
     //Mojang
     public static final String MC_VERSION_MANIFEST = "https://launchermeta.mojang.com/mc/game/version_manifest.json";
-    public static final String MC_RESOURCES = "http://resources.download.minecraft.net/";
+    public static final String MC_RESOURCES = "https://resources.download.minecraft.net/";
     public static final String MC_LIBS = "https://libraries.minecraft.net/";
     public static final String MC_LAUNCHER = "https://launcher.mojang.com/download/Minecraft.";
 
@@ -31,6 +43,9 @@ public class Constants
     public static final String CREEPERHOST_MODPACK_SEARCH2 = CREEPERHOST_MODPACK + "/public/modpack/";
     public static final String SHARE_API = CREEPERHOST_MODPACK + Constants.KEY + "/modpack/share/";
     public static final String MOD_API = CREEPERHOST_MODPACK + "/public/mod/";
+
+    public static final String CH_MAVEN = "https://maven.creeperhost.net/";
+    public static final String MC_JSONS = "https://apps.modpacks.ch/versions/minecraftjsons/";
 
     //Forge
     public static final String FORGE_XML = "https://files.minecraftforge.net/maven/net/minecraftforge/forge/maven-metadata.xml";
@@ -44,16 +59,44 @@ public class Constants
 
     public static final Path VERSIONS_FOLDER_LOC = getDataDir().resolve(Paths.get("bin", "versions"));
     public static final Path INSTANCES_FOLDER_LOC = getDataDir().resolve("instances");
-    public static final String LAUNCHER_PROFILES_JSON_NAME = "launcher_profiles.json";
-    public static final Path LAUNCHER_PROFILES_JSON = BIN_LOCATION.resolve(LAUNCHER_PROFILES_JSON_NAME);
     public static final Path LIBRARY_LOCATION = BIN_LOCATION.resolve("libraries");
-    public static final Path OLD_CACHE_LOCATION = getDataDir().resolve(".localCache");
 
     //Other
     public static final int WEBSOCKET_PORT = 13377;
     public static final String APPVERSION = "@APPVERSION@";
     public static final String BRANCH = "@BRANCH@";
     public static final String PLATFORM = WORKING_DIR.toAbsolutePath().toString().contains("Overwolf") ? "Overwolf" : "Electron";
+    // TODO, can this be FTBApp instead of 'modpacklauncher'? Does the API rely on this user agent string?
+    public static final String USER_AGENT = "modpacklauncher/" + APPVERSION + " Mozilla/5.0 (" + OS.CURRENT.name() + ") AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.138 Safari/537.36 Vivaldi/1.8.770.56";
+    private static final Throttler GLOBAL_THROTTLER = new Throttler();
+
+    public static final OkHttpClient OK_HTTP_CLIENT = new OkHttpClient.Builder()
+            .cookieJar(new SimpleCookieJar())
+            .addInterceptor(new ThrottlerInterceptor())
+            .addInterceptor(new MultiHasherInterceptor())
+            .build();
+
+    public static JdkInstallationManager JDK_INSTALL_MANAGER = new JdkInstallationManager(
+            Constants.BIN_LOCATION.resolve("runtime"),
+            new AdoptiumProvisioner(() -> new OkHttpDownloadAction()
+                    .setClient(OK_HTTP_CLIENT)
+                    .addTag(Throttler.class, Constants.getGlobalThrottler())
+            ),
+            true
+    );
+
+    // Default arguments applied to all instances in the Minecraft launcher as of 29/11/2021
+    public static final String[] MOJANG_DEFAULT_ARGS = {
+            "-Xmx${memory}M",
+            "-XX:+UnlockExperimentalVMOptions",
+            "-XX:+UseG1GC",
+            "-XX:G1NewSizePercent=20",
+            "-XX:G1ReservePercent=20",
+            "-XX:MaxGCPauseMillis=50",
+            "-XX:G1HeapRegionSize=32M"
+    };
+
+    public static final String LOG4JPATCHER_URL = "https://github.com/CreeperHost/Log4jPatcher/releases/download/v1.0.1/Log4jPatcher-1.0.1.jar";
 
     //Auth
     public static String KEY = "";
@@ -71,40 +114,45 @@ public class Constants
 
     public static String LIB_SIGNATURE = SignatureUtil.getSignature();
 
-    public static String getCreeperhostModpackSearch2(boolean _private, byte packType)
-    {
-        String typeSlug = "modpack";
+    public static String getCreeperhostModpackPrefix(boolean isPrivate, byte packType) {
+        String key = "public";
+        String typeSlug = switch (packType) {
+            case 1 -> "curseforge";
+            default -> "modpack";
+        };
 
-        switch (packType)
-        {
-            case 1:
-                return Constants.CREEPERHOST_MODPACK + "/public/" + "curseforge" + "/"; // no such thing as private curse modpacks, rest of logic not needed
+        if (packType == 1) {
+            // CurseForge has no private packs.
+            isPrivate = false;
         }
-        if(Constants.KEY.isEmpty() || !_private)
-        {
-            return Constants.CREEPERHOST_MODPACK + "/public/" + typeSlug + "/";
+
+        if (!Constants.KEY.isEmpty() && isPrivate) {
+            key = Constants.KEY;
         }
-        if(Constants.KEY.isEmpty() && _private)
-        {
-            LOGGER.error("Tried to access a private pack without having configured the secret and key.");
-        }
-        return Constants.CREEPERHOST_MODPACK + "/" + Constants.KEY + "/" + typeSlug + "/";
+        return Constants.CREEPERHOST_MODPACK + "/" + key + "/" + typeSlug + "/";
     }
-    public static Path getDataDir()
-    {
-        Path ret = DATA_DIR;
-        switch (OS.CURRENT) {
-            case WIN:
-                ret = Paths.get(System.getenv("LOCALAPPDATA"), INNER_DATA_DIR);
-                break;
-            case MAC:
-                ret = Paths.get(System.getProperty("user.home"), "Library", "Application Support", INNER_DATA_DIR);
-                break;
+
+    public static Path getDataDir() {
+        if (System.getProperty("ftba.dataDirOverride") != null) {
+            return Path.of(System.getProperty("ftba.dataDirOverride")).toAbsolutePath().normalize();
         }
+
+        Path ret = switch (OS.CURRENT) {
+            case WIN -> Paths.get(System.getenv("LOCALAPPDATA"), INNER_DATA_DIR);
+            case MAC -> Paths.get(System.getProperty("user.home"), "Library", "Application Support", INNER_DATA_DIR);
+            default -> DATA_DIR;
+        };
         return ret.toAbsolutePath().normalize();
     }
 
-    public static Path getDataDirOld() {
-        return DATA_DIR.toAbsolutePath();
+    public static Throttler getGlobalThrottler() {
+        // TODO, double-check this logic.
+        long maxSpeed = Settings.getSpeedLimit() * 1000L;
+        if (maxSpeed > 0) {
+            GLOBAL_THROTTLER.bytesPerSecond((maxSpeed / 8) * 2); //Some reason it always limits to 50% for me, so we multiply!
+        } else {
+            GLOBAL_THROTTLER.bytesPerSecond(Long.MAX_VALUE);
+        }
+        return GLOBAL_THROTTLER;
     }
 }
